--- a/shop/style/blocks/_product-list.scss
+++ b/shop/style/blocks/_product-list.scss
@@ -14,6 +14,8 @@
 
     &__item {
         width: 360px;
+        display: flex;
+        flex-direction: column;
         background-color: #F8F8F8;
         position: relative;
 
