--- a/shop/style/style.css
+++ b/shop/style/style.css
@@ -423,6 +423,13 @@
 
 .product-list__item {
   width: 360px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #F8F8F8;
   position: relative;
 }
